app/styles/_form.scss
$form-background-color: rgba($base-font-color, .1);
$form-focus-background-color: rgba($base-font-color, .15);

form {
	position: relative;
	z-index: $form-z-index;
	background-color: $form-background-color;
	border-bottom: 1px solid rgba($base-font-color, .1);
	margin: -$base-spacing;
	padding: $base-spacing;

	max-height: 70%;
	overflow: auto;

	transition: background .1s ease;

	p {
		margin: 0;
	}

	&.focus {
		background-color: $form-focus-background-color;
	}

	&.has-autofocus {
		cursor: text;
		user-select: none;
	}
}
.icon-search {
	height: 1.2em;
	width: 1.2em;
	position: absolute;
	top: $base-spacing;
	left: $base-spacing;
	fill: $base-font-color;
	transition: fill 1s ease;
	path {
		stroke-width: 0;
		fill: inherit;
	}
}
input {
	margin: -$base-spacing/4;
	padding-left: 1.4em !important;
	margin-bottom: .5em;
}
.twitter-typeahead {
	width: 100%;
}
.publication-halflife {
	font-weight: 300;
}

